--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/t1maccapp/onetwotrip-test-1/issues"
   },
-  "homepage": "https://github.com/t1maccapp/onetwotrip-test-1#readme"
+  "homepage": "https://github.com/t1maccapp/onetwotrip-test-1#readme",
+  "dependencies": {
+    "redis": "^2.8.0"
+  }
 }
