--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "coverage": "node_modules/istanbul/lib/cli.js cover --include-all-sources ./node_modules/mocha/bin/_mocha -- --ui bdd -R spec -t 5000 --recursive ./spec/tests/unit",
     "lint": "node_modules/standard/bin/cmd.js --ignore spec/*",
     "security": "node_modules/retire/bin/retire; node_modules/nsp/bin/nsp check",
-    "worker": "node app.js"
+    "worker": "node app.js",
+    "errors": "node app.js --getErrors",
+    "requeue": "node app.js --requeue"
   },
   "repository": {
     "type": "git",
